--- a/Website Project/style.css
+++ b/Website Project/style.css
@@ -100,3 +100,9 @@ table {
   border-spacing: 0;
   border-collapse: collapse;
 }
+
+video {
+  margin-bottom: 20px;
+  margin-left: 160px;
+  filter: grayscale(100%);
+}
